<resources>
    <!--Application-->
    <string name="app_name">Sahaay</string>

    <!--Launching screen-->
    <string name="get_started_button_string">Get Started</string>
    <string name="welcome_text_string">Welcome to Sahaay</string>
    <string name="select_language">Select your language</string>
    <string-array name="language_options">
        <item>English</item>
        <item>Hindi</item>
        <item>Marathi</item>
    </string-array>

    <!-- Login and Register-->
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">Not registered yet? Register</string>
    <string name="text_already_member">Already signed up? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Sahaay</string>
    <string name="already_member">Already a member? Login</string>

    <!--Home Screen-->
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Sahaay Logo</string>
    <string name="drawer_emergency">Emergency</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_nearby_hospitals">Nearby Hospitals</string>
    <string name="drawer_first_aider">First aider</string>
    <string name="drawer_videos">Videos</string>
    <string name="drawer_history">History</string>
    <string name="drawer_communicate">Communicate</string>
    <string name="drawer_share">Share</string>
    <string name="drawer_about_us">About Us</string>
    <string name="drawer_contact_us">Contact Us</string>
    <string name="drawer_rate_us">Rate Us</string>
    <string name="emergency_button_text">Emergency button is pressed</string>

</resources>
