<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@color/colorBackground">

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="45dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="225dp"
        android:fontFamily="times"
        android:text="@string/welcome_text_string"
        android:textSize="27sp" />

    <TextView
        android:id="@+id/select_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="257dp"
        android:fontFamily="times"
        android:text="@string/select_language"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/language_dropdown"
        android:layout_width="227dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="216dp"
        android:background="@color/colorContrast"
        android:entries="@array/language_options"
        android:prompt="@string/select_language"
        android:text="@color/colorText" />

    <Button
        android:id="@+id/get_started_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="105dp"
        android:background="@color/colorTextHint"
        android:padding="10dp"
        android:text="@string/get_started_button_string"
        android:textColor="@color/colorAccent" />



</RelativeLayout>